--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
 
 
-<% if(books.book.length) { %>
+<% if(books.length) { %>
 
     <table class="table table-striped table-sm  mt-3">
         <thead>
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
 
-            <% books.book.map((el, idx) => {  %>
+            <% books.map((el, idx) => {  %>
                 <tr>
                     <th scope="row"><%= idx +1 %></th>
                     <td><%= el.title %></td>
