--- a/views/chunks/menu.ejs
+++ b/views/chunks/menu.ejs
@@ -15,8 +15,14 @@
                 <a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                
+                <a class="nav-link" href="/user/login">вход<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/register">регистрация<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/me">страница профиля <span class="sr-only">(current)</span></a>
+            </li>   
         </ul>
     </div>
 </nav>
