--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,36 +1,59 @@
 <%- include('./chunks/start', {title: title}) %>
-<%- include('./chunks/menu') %>
+    <%- include('./chunks/menu') %>
 
-<h1><%= title %></h1>
+        <h1>
+            <%= title %>
+        </h1>
 
-<div class="row">
-    <div class="col-sm-8">
-        <div class="card">
-            <div class="card-body">
+       
 
-                <h5 class="card-title"><%= books.title %></h5>
-                <p class="card-text"><%= books.description %></p>
-                <p class="card-text"><%= books.authors %></p>
-                <p class="card-text"><%= books.favorite %></p>
-                <p class="card-text"><%= books.fileCover %></p>
-                <p class="card-text"><%= books.fileName %></p>
-                <p class="card-text"><%= books.fileBook %></p>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
 
-                <div class="text-right">
-                    <a class="btn btn-sm btn-primary" href="/book/update/<%= books.id %>">
-                        <i class="fa fa-pencil" aria-hidden="true"></i>
-                    </a>
-                    <form action="/book/delete/<%= books.id %>" method="POST" class="d-inline">
-                        <button class="btn btn-sm btn-danger">
-                            <i class="fa fa-trash" aria-hidden="true"></i>
-                        </button>
-                    </form>
+                        <h5 class="card-title">
+                            <%= books.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= books.description %>
+                        </p>
+                        <p class="card-text">
+                            <%= books.authors %>
+                        </p>
+                        <p class="card-text">
+                            <%= books.favorite %>
+                        </p>
+                        <p class="card-text">
+                            <%= books.fileCover %>
+                        </p>
+                        <p class="card-text">
+                            <%= books.fileName %>
+                        </p>
+                        <p class="card-text">
+                            <%= books.fileBook %>
+                        </p>
+
+                        <div class="text-right">
+                            <a class="btn btn-sm btn-primary" href="/book/update/<%= books.id %>">
+                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                            </a>
+                            <form action="/book/delete/<%= books.id %>" method="POST" class="d-inline">
+                                <button class="btn btn-sm btn-danger">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                        </div>
+
+                    </div>
                 </div>
-
             </div>
         </div>
-    </div>
-</div>
+        <h1>
+            Обсуждение книги
+        </h1>
+        <%- include('./chunks/chat') %>        
 
-
-<%- include('./chunks/end') %>
+        
+        <%- include('./chunks/script_io') %>
+        <%- include('./chunks/end') %>
